Change resetToken on profile out for generateToken

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -31,7 +31,7 @@
             </h1>
 
             <p>
-              To view your token, you must click <md-button md-no-ink ng-click="resetToken()" class="md-button md-default-theme"><i class="fa fa-key"></i> Reset Token</md-button> and it will be displayed one time only. Your token gives you full access to your account and connected devices, be sure to keep it secret.
+              To obtain a token, you must click <md-button md-no-ink ng-click="generateSessionToken()" class="md-button md-default-theme"><i class="fa fa-key"></i> Generate Token</md-button> and it will be displayed one time only. Your token gives you full access to your account and connected devices, be sure to keep it secret.
             </p>
           </div>
         </div>
