--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -34,7 +34,7 @@
                         </li>
                     </ul>
                 </li>
-                <li ui-sref-active="active"><a href ui-sref="material.nodes"><i class="fa fa-plug fa-lg"></i>&nbsp;Connect</a></li>
+                <li ui-sref-active="active"><a href ui-sref="material.configure"><i class="fa fa-plug fa-lg"></i>&nbsp;Connect</a></li>
                 <li ui-sref-active="active"><a href ui-sref="design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.analyze"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyze</a></li>
