--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:700,300,600,400" rel='stylesheet' type='text/css'>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
     <title>Octoblu - Integration of Everything</title>
@@ -41,7 +40,7 @@
     <script src="/assets/javascripts/dist/application.js"></script>
 
     <!-- Site metrics -->
-    <script type="text/javascript">
+    <script async type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
