--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -29,7 +29,5 @@
 
   <random-robot title='No matching nodes for "{{nodeNameSearch}}"' ng-show="nodeNameSearch.length && !filteredNodeTypes.length"></random-robot>
 
-  <div class="blu-loading" ng-show="loadingNodes">
-    <i class="blu-loading__icon fa fa-spinner fa-5x fa-spin"></i>
-  </div>
+  <da-loading loading="loadingNodes"></da-loading>
 </div>
