--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -13,14 +13,18 @@
       <i class="fa fa-bars fa-2x"></i>
     </md-button>
 
-    <md-content>
+    <md-content class="navigation">
       <a href ng-click="closeNav()" ui-sref="material.nodewizard.addnode" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
-        <span>Nodes</span>
+        <span>Connect</span>
       </a>
       <a href ng-click="closeNav()" ui-sref="material.design" layout="row" layout-align="start center">
         <i class="fa fa-edit fa-lg"></i>
         <span>Design</span>
+      </a>
+      <a href ng-click="closeNav()" ui-sref="material.configure" layout="row" layout-align="start center">
+        <i class="fa fa-puzzle-piece fa-lg"></i>
+        <span>Configure</span>
       </a>
       <a href ng-click="closeNav()" ui-sref="material.process" layout="row" layout-align="start center">
         <i class="fa fa-tasks fa-lg"></i>
@@ -38,16 +42,16 @@
         <i class="fa fa-file-text fa-lg"></i>
         <span>Bluprints</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
-        <i class="fa fa-book fa-lg"></i>
-        <span>Resources</span>
-      </a>
 
       <md-divider></md-divider>
 
       <a href ng-click="closeNav()" ui-sref="material.profile" layout="row" layout-align="start center">
         <i class="fa fa-user fa-lg"></i>
         <span>Profile</span>
+      </a>
+      <a href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
+        <i class="fa fa-book fa-lg"></i>
+        <span>Learn</span>
       </a>
       <a href ng-click="logout()" layout="row" layout-align="start center">
         <i class="fa fa-sign-out fa-lg"></i>
