working on random robot for configure page

--- a/public/angular/directives/device-collection/device-collection.html
+++ b/public/angular/directives/device-collection/device-collection.html
@@ -1,16 +1,30 @@
 <div>
   <div class="connected-nodes interior">
     <div ng-repeat="device in filteredDevices = (devices | filter: categoryFilter | filter: { name: nameFilter } | orderBy: 'name')" class="connected-node">
-      <a href="{{controller.nextStepUrl(device)}}">
+      <a href="{{nextStepUrl(device)}}">
         <div title="{{device.name}}" class="connected-node-thumbnail animated-popout" ng-class="{faded: (!device.online && device.uuid)}">
-          <img ng-src="{{controller.logoUrl(device)}}" width="100%" height="100%">
+          <img ng-src="{{logoUrl(device)}}" width="100%" height="100%">
         </div>
         <div class="connected-node-name truncate">{{device.name}}</div>
       </a>
     </div>
   </div>
 
+  {{controller.activeTab}}
+
   <random-robot title='No matching nodes for "{{nameFilter}}"' ng-show="nameFilter.length && !filteredDevices.length"></random-robot>
+  <random-robot title='No matching nodes for "{{activeTab}}"' ng-show="!nameFilter && !filteredDevices.length">
+    <div>
+      <p>No nodes found.</p>
+      <p>Want to add some now?</p>
+      <span>
+        <a ui-sref="material.nodewizard.addnode" class="button interior__header-action">
+        Connect More Nodes
+      </a>
+      </span>
+    </div>
+
+  </random-robot>
 
   <div class="blu-loading" ng-show="loading">
     <i class="blu-loading__icon fa fa-spinner fa-5x fa-spin"></i>
