--- a/public/pages/configure.html
+++ b/public/pages/configure.html
@@ -32,6 +32,10 @@
     </div>
   </header>
 
-  <device-collection devices="devices" category-filter="categoryFilter" name-filter="{{deviceNameFilter}}" loading="loading">
+  <device-collection devices="devices"
+                     category-filter="categoryFilter"
+                     name-filter="{{deviceNameFilter}}"
+                     loading="loading"
+                     activeTab="activeTab">
   </device-collection>
 </md-content>
