--- a/public/pages/configure.html
+++ b/public/pages/configure.html
@@ -36,6 +36,6 @@
                      category-filter="categoryFilter"
                      name-filter="{{deviceNameFilter}}"
                      loading="loading"
-                     activeTab="activeTab">
+                     active-tab="activeTab">
   </device-collection>
 </md-content>
