--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -14,7 +14,7 @@
     </md-button>
 
     <md-content class="navigation">
-      <a href ng-click="closeNav()" ui-sref="material.nodewizard.addnode" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.nodewizard.addnode" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
         <span>Connect</span>
       </a>
@@ -22,11 +22,11 @@
         <i class="fa fa-edit fa-lg"></i>
         <span>Design</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.configure" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.configure" layout="row" layout-align="start center">
         <i class="fa fa-puzzle-piece fa-lg"></i>
         <span>Configure</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.process" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.process" layout="row" layout-align="start center">
         <i class="fa fa-tasks fa-lg"></i>
         <span>Process</span>
       </a>
@@ -49,11 +49,11 @@
         <i class="fa fa-user fa-lg"></i>
         <span>Profile</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
         <i class="fa fa-book fa-lg"></i>
         <span>Learn</span>
       </a>
-      <a href ng-click="logout()" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="logout()" layout="row" layout-align="start center">
         <i class="fa fa-sign-out fa-lg"></i>
         <span>Sign out</span>
       </a>
