--- a/public/angular/directives/device-collection/device-collection.html
+++ b/public/angular/directives/device-collection/device-collection.html
@@ -10,18 +10,19 @@
     </div>
   </div>
 
-  <random-robot title='No matching nodes for "{{nameFilter}}"' ng-show="nameFilter.length && !filteredDevices.length"></random-robot>
-  <random-robot title='No matching nodes for {{activeTab}}' ng-show="!nameFilter && !filteredDevices.length">
-    <div>
-      <p>Whoa, looks like you don't have any {{activeTab}} configured!</p>
-      <a ui-sref="material.nodewizard.addnode" class="button interior__error-action">
-        Configure {{activeTab}}
-      </a>
-    </div>
-
-  </random-robot>
-
   <div class="blu-loading" ng-show="loading">
     <i class="blu-loading__icon fa fa-spinner fa-5x fa-spin"></i>
   </div>
+
+  <div ng-hide="loading">
+    <random-robot title='No matching nodes for "{{nameFilter}}"' ng-show="nameFilter.length && !filteredDevices.length"></random-robot>
+
+    <random-robot ng-show="!nameFilter && !filteredDevices.length">
+      <p>Whoa, looks like you don't have any {{activeTab}} configured!</p>
+      <a ui-sref="material.nodewizard.addnode" class="button blu-bordered-button">
+        Configure {{activeTab}}
+      </a>
+    </random-robot>
+  </div>
+
 </div>
