font sizing tweaks

--- a/public/pages/bluprints.html
+++ b/public/pages/bluprints.html
@@ -2,7 +2,8 @@
   <div class="md-toolbar-tools">
     <a href class="menu-icon flow-top-bar-tool--menu-button" ng-click="toggleNav()">
       <h3 class="page-heading bluprint-header">
-        <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i> Bluprints
+        <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
+        Bluprints
       </h3>
     </a>
 
