--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -1,6 +1,6 @@
 <md-toolbar>
   <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
-    <div flex layout="row">
+    <div class="toolbar-header" flex layout="row">
       <a href class="menu-icon flow-top-bar-tool--menu-button" ng-click="toggleNav()">
         <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
         Analyze
