--- a/public/pages/configure.html
+++ b/public/pages/configure.html
@@ -1,5 +1,5 @@
 <md-toolbar>
-  <h2 class="md-toolbar-tools page-heading">
+  <h2 class="md-toolbar-tools page-heading margin">
     <a href class="menu-icon" ng-click="toggleNav()">
       <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
       Configure
