Changed 'Learn' to 'Resources'

--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -51,7 +51,7 @@
       </a>
       <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
         <i class="fa fa-book fa-lg"></i>
-        <span>Learn</span>
+        <span>Resources</span>
       </a>
       <a class="navbar-item" href ng-click="logout()" layout="row" layout-align="start center">
         <i class="fa fa-sign-out fa-lg"></i>
