--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -14,17 +14,13 @@
     </md-button>
 
     <md-content class="navigation">
-      <a href ng-click="closeNav()" ui-sref="material.nodewizard.addnode" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.configure" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
-        <span>Connect</span>
+        <span>My Devices</span>
       </a>
       <a href ng-click="closeNav()" ui-sref="material.design" layout="row" layout-align="start center">
         <i class="fa fa-edit fa-lg"></i>
         <span>Design</span>
-      </a>
-      <a href ng-click="closeNav()" ui-sref="material.configure" layout="row" layout-align="start center">
-        <i class="fa fa-puzzle-piece fa-lg"></i>
-        <span>Configure</span>
       </a>
       <a href ng-click="closeNav()" ui-sref="material.process" layout="row" layout-align="start center">
         <i class="fa fa-tasks fa-lg"></i>
