a few more tweaks

--- a/public/pages/device-detail-permissions.html
+++ b/public/pages/device-detail-permissions.html
@@ -6,10 +6,10 @@
     <thead>
       <tr>
         <th></th>
-        <th class="text-center">Can Be Discovered By</th>
-        <th class="text-center">Can Be Sent Messages By</th>
-        <th class="text-center">Can Broadcast To</th>
-        <th class="text-center">Can Be Modified By</th>
+        <th class="text-left">Can Be Discovered By</th>
+        <th class="text-left">Can Be Sent Messages By</th>
+        <th class="text-left">Can Broadcast To</th>
+        <th class="text-left">Can Be Modified By</th>
       </tr>
     </thead>
 
