--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -13,7 +13,7 @@
     <flow-editor flow="bluprint.flow" readonly="true"></flow-editor>
 
     <md-button class="md-fab md-primary"  style="position:fixed; bottom: 260px; right: 28px" ng-click="import()" title="Import" ng-class="{importing: importing}" aria-label="import">
-      <i class="fa fa-cloud-download fa-2x"></i>
+      <i class="fa fa-cloud-download fa-2x padding-top"></i>
     </md-button>
 
     <md-content class="bill-of-materials" flex layout="row" layout-wrap="wrap" layout-align="space-around" ng-class="{importing: importing}">
