--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -28,7 +28,7 @@
           <h2 class="md-toolbar-tools">Topics</h2>
       </md-toolbar>
       <div flex ng-show="!loadingTopicData && topicData.data.length === 0" layout="row" layout-sm="column" layout-align="center center">
-        <h3>No Data Yet. Try starting a flow.</h3>
+        <h3 class="no-data-body">No Data Yet. Try starting a flow.</h3>
       </div>
       <canvas ng-if="!loadingTopicData" class="chart chart-pie" data="topicData.data" labels="topicData.labels" legend="true" click="onClickPieSlice"></canvas>
       <div flex ng-show="loadingTopicData" layout="row" layout-sm="column" layout-align="center center">
