--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -16,8 +16,12 @@
     </div>
   </header>
 
-  <div ng-repeat="category in categories">
-    <device-collection devices="category.devices" category="category.label" name-filter="{{nodeNameSearch}}" loading="loading">
+  <div class="blu-loading" ng-show="loading">
+    <i class="blu-loading__icon fa fa-spinner fa-5x fa-spin"></i>
+  </div>
+  <random-robot title='No Devices Found for "{{nodeNameSearch}}"' ng-show="noDevices"></random-robot>
+  <div ng-repeat="(category, devices) in devicesByCategory">
+    <device-collection devices="devices" category="category">
     </device-collection>
   </div>
 
