--- a/public/pages/configure.html
+++ b/public/pages/configure.html
@@ -13,7 +13,7 @@
       <div class="interior__header-actions">
         <div class="lookup">
           <i class="lookup__icon fa fa-search fa-lg"></i>
-          <input ng-model="deviceNameFilter" placeholder="Filter Nodes..." type="search" class="lookup__input" value="deviceNameFilter" autofocus>
+          <input ng-model="deviceNameFilter" placeholder="Filter Nodes..." type="search" class="lookup__input" autofocus>
         </div>
 
         <div class="interior__header-separator"></div>
@@ -25,9 +25,13 @@
     </div>
   </header>
 
-  <device-collection devices="devices"
-                     name-filter="{{deviceNameFilter}}"
-                     loading="loading"
-                     categories="deviceCategories">
-  </device-collection>
+
+  <div class="blu-loading" ng-show="loading">
+    <i class="blu-loading__icon fa fa-spinner fa-5x fa-spin"></i>
+  </div>
+  <random-robot title='No Devices Found for "{{deviceNameFilter}}"' ng-show="noDevices"></random-robot>
+  <div ng-repeat="(category, devices) in devicesByCategory">
+    <device-collection devices="devices" category="category">
+    </device-collection>
+  </div>
 </md-content>
