--- a/public/pages/device-detail.html
+++ b/public/pages/device-detail.html
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <md-tabs>
+  <md-tabs md-dynamic-height>
     <md-tab label="Properties">
       <div ng-include="'/pages/device-detail-properties.html'"></div>
     </md-tab>
