--- a/public/angular/directives/device-collection/device-collection.html
+++ b/public/angular/directives/device-collection/device-collection.html
@@ -1,6 +1,6 @@
 <div class="interior device-collection">
   <header class="device-collection__header">
-    <h2>{{category | uppercase}}</h2>
+    <h2 ng-hide="category == 'undefined'">{{category | uppercase}}</h2>
   </header>
 
   <div class="device-collection__list">
@@ -16,10 +16,4 @@
       <div class="device-collection__item-name truncate">{{device.name}}</div>
     </a>
   </div>
-
-  <!-- <random-robot
-    title='No matching nodes for "{{nameFilter}}"'
-    ng-show="nameFilter.length && !filteredDevices.length && !loading">
-  </random-robot> -->
-
 </div>
