--- a/public/pages/configure.html
+++ b/public/pages/configure.html
@@ -29,7 +29,7 @@
   <div class="blu-loading" ng-show="loading">
     <i class="blu-loading__icon fa fa-spinner fa-5x fa-spin"></i>
   </div>
-  <random-robot title='No Devices Found for "{{deviceNameFilter}}"' ng-show="noDevices"></random-robot>
+  <random-robot title='No Devices Found for "{{deviceNameFilter}}"' ng-show="noDevices && !loading"></random-robot>
   <div ng-repeat="(category, devices) in devicesByCategory">
     <device-collection devices="devices" category="category">
     </device-collection>
