--- a/public/angular/directives/device-collection/device-collection.html
+++ b/public/angular/directives/device-collection/device-collection.html
@@ -1,6 +1,6 @@
 <div class="interior device-collection">
   <header class="device-collection__header">
-    <h2>{{category | uppercase}}</h2>
+    <h4 class="device-collection__header-label">{{category | uppercase}}</h4>
   </header>
 
   <div class="device-collection__list">
