--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -3,7 +3,7 @@
   <div class='page-header page-header-with-buttons'>
     <h1>
       <i class='fa fa-plug'></i>
-      <span>Connect</span>
+      <span>Things</span>
     </h1>
   </div>
 
