--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -16,7 +16,7 @@
     <md-content class="navigation">
       <a href ng-click="closeNav()" ui-sref="material.configure" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
-        <span>My Devices</span>
+        <span>My Things</span>
       </a>
       <a href ng-click="closeNav()" ui-sref="material.design" layout="row" layout-align="start center">
         <i class="fa fa-edit fa-lg"></i>
