--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -4,13 +4,13 @@
       <div class="interior__header-actions">
         <div class="lookup">
           <i class="lookup__icon fa fa-search fa-lg"></i>
-          <input ng-model="nodeNameSearch" placeholder="Filter Nodes..." type="search" class="lookup__input" autofocus>
+          <input ng-model="nodeNameSearch" placeholder="Filter Things..." type="search" class="lookup__input" autofocus>
         </div>
 
         <div class="interior__header-separator"></div>
 
         <a ui-sref="material.configure" class="button interior__header-action">
-          My Devices
+          My Things
         </a>
       </div>
     </div>
@@ -20,8 +20,8 @@
     <i class="blu-loading__icon fa fa-spinner fa-5x fa-spin"></i>
   </div>
 
-  <random-robot title='No Devices Found for "{{nodeNameSearch}}"' ng-show="noDevices && !loading"></random-robot>
-  
+  <random-robot title='No Things Found for "{{nodeNameSearch}}"' ng-show="noDevices && !loading"></random-robot>
+
   <div ng-repeat="(category, devices) in devicesByCategory">
     <device-collection devices="devices" category="category">
     </device-collection>
