use ng-src correctly

--- a/public/pages/node-collection-list.html
+++ b/public/pages/node-collection-list.html
@@ -9,7 +9,7 @@
     draggable-data="flowNodeType">
 
     <img class="node-collection-thumbnail"
-        src="{{flowNodeType.logo}}"
+        ng-src="{{flowNodeType.logo}}"
         alt="{{flowNodeType.name || flowNodeType.type}}"/>
 
     <div class="node-collection-description">
