--- a/public/pages/node-collection-grid.html
+++ b/public/pages/node-collection-grid.html
@@ -17,7 +17,7 @@
     draggable-data="flowNodeType">
 
     <img class="node-grid-thumbnail"
-        src="{{flowNodeType.logo}}"
+        ng-src="{{flowNodeType.logo}}"
         alt="{{flowNodeType.name || flowNodeType.type}}" />
 
     <md-tooltip md-delay="400" md-autohide="false">{{flowNodeType.name || flowNodeType.type}}</md-tooltip>
@@ -26,5 +26,5 @@
   <h3 class="node-collection-no-matches" ng-show="!filteredNodes.length && filterQuery.name.length">
     No matches for "{{filterQuery.name}}"
   </h3>
-  
+
 </md-grid-list>
