--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -45,15 +45,22 @@
         <i class="fa fa-mail-forward fa-lg"></i>
       </md-button>
 
-      <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-stopped': deviceOnline === false, stopping: stopping }" aria-label="Stop">
-        <md-tooltip>Stop</md-tooltip>
-        <i class="fa fa-stop"></i>
+      <md-button ng-if="deployProgress !== 0" aria-label="Progress">
+        <md-tooltip>Progress</md-tooltip>
+        {{deployProgress}}%
       </md-button>
+      <md-progress-linear ng-if="deployProgress !== 0" class="md-accent" md-mode="buffer" value="{{deployProgress}}"></md-progress-linear>
+      <span ng-if="deployProgress === 0">
+        <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-stopped': deviceOnline === false}" aria-label="Stop">
+          <md-tooltip>Stop</md-tooltip>
+          <i class="fa fa-stop"></i>
+        </md-button>
 
-      <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-playing': deviceOnline, deploying: deploying, 'needs-to-be-deployed': needsToBeDeployed }" aria-label="Start">
-        <md-tooltip>Start</md-tooltip>
-        <i class="fa fa-play"></i>
-      </md-button>
+        <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-playing': deviceOnline, 'needs-to-be-deployed': needsToBeDeployed }" aria-label="Start">
+          <md-tooltip>Start</md-tooltip>
+          <i class="fa fa-play"></i>
+        </md-button>
+      </span>
     </div>
   </div>
 </md-toolbar>
