angular is stupid

--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -1,7 +1,7 @@
 <div class="sidebar__pane-content">
   <header class="sidebar__toolbar sidebar__toolbar--header">
     <div class="md-toolbar-tools">
-      <h1 class="sidebar__pane-title">Node Inspector</h1>
+      <div class="sidebar__pane-title">Node Inspector</div>
       <span flex></span>
       <md-button ng-click="deleteNode()" aria-label="Delete"><i class="fa fa-lg fa-trash"></i></md-button>
     </div>
