connect goes to add things, terminology is better meow too

--- a/public/pages/configure.html
+++ b/public/pages/configure.html
@@ -2,7 +2,7 @@
   <h2 class="md-toolbar-tools page-heading margin">
     <a href class="menu-icon" ng-click="toggleNav()">
       <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
-      My Things
+      Connected Things
     </a>
   </h2>
 </md-toolbar>
@@ -19,7 +19,7 @@
         <div class="interior__header-separator"></div>
 
         <a ui-sref="material.nodewizard.addnode" class="button interior__header-action">
-          Browse Things
+          Add More Things
         </a>
       </div>
     </div>
