--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -14,9 +14,9 @@
     </md-button>
 
     <md-content class="navigation">
-      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.configure">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.nodewizard.addnode">
         <i class="fa fa-plug fa-lg"></i>
-        <span>My Things</span>
+        <span>Connect</span>
       </a>
       <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.design">
         <i class="fa fa-edit fa-lg"></i>
