--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -45,11 +45,13 @@
         <i class="fa fa-mail-forward fa-lg"></i>
       </md-button>
 
-      <md-button ng-if="deployProgress !== 0" aria-label="Progress">
-        <md-tooltip>Progress</md-tooltip>
-        {{deployProgress}}%
-      </md-button>
-      <md-progress-linear ng-if="deployProgress !== 0" class="md-accent" md-mode="buffer" value="{{deployProgress}}"></md-progress-linear>
+      <span ng-if="deployProgress !== 0">
+        <md-button aria-label="Progress" style="width: 75px;">
+          <md-tooltip>Progress</md-tooltip>
+          {{deployProgress}}%
+        </md-button>
+        <md-progress-linear class="md-accent" md-mode="buffer" value="{{deployProgress}}"></md-progress-linear>
+      </span>
       <span ng-if="deployProgress === 0">
         <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-stopped': deviceOnline === false}" aria-label="Stop">
           <md-tooltip>Stop</md-tooltip>
