--- a/public/pages/collection-browser.html
+++ b/public/pages/collection-browser.html
@@ -2,7 +2,7 @@
   <div class="sidebar__pane-content">
     <header class="sidebar__toolbar sidebar__toolbar--header">
       <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('nodes')" ng-class="{'active' : tab.state === 'nodes'}" title="Nodes">
-        Nodes
+        Things
       </a>
 
       <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('flows')" ng-class="{'active' : tab.state === 'flows'}" title="Flows">
