whoops, sidebar directive actually works now

--- a/public/pages/sidebar.html
+++ b/public/pages/sidebar.html
@@ -1,4 +1,4 @@
 <div ng-class="{'sidebar--is-expanded': expandedState}" class="sidebar">
-  <flow-inspector flow="activeFlow"></flow-inspector>
-  <collection-browser flow="activeFlow"></collection-browser>
+  <flow-inspector flow="flow"></flow-inspector>
+  <collection-browser flow="flow"></collection-browser>
 </div>
