--- a/public/pages/configure.html
+++ b/public/pages/configure.html
@@ -2,7 +2,7 @@
   <h2 class="md-toolbar-tools page-heading margin">
     <a href class="menu-icon" ng-click="toggleNav()">
       <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
-      Connected Things
+      Things
     </a>
   </h2>
 </md-toolbar>
@@ -10,6 +10,7 @@
 <md-content class="interior__wrapper" autoscroll="false">
   <header class="interior__header">
     <div class="interior">
+      <h2>Connected Things</h2>
       <div class="interior__header-actions">
         <div class="lookup">
           <i class="lookup__icon fa fa-search fa-lg"></i>
