--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -1,6 +1,7 @@
 <div class="interior__wrapper">
   <header class="interior__header">
     <div class="interior">
+      <h2>All Things</h2>
       <div class="interior__header-actions">
         <div class="lookup">
           <i class="lookup__icon fa fa-search fa-lg"></i>
@@ -10,7 +11,7 @@
         <div class="interior__header-separator"></div>
 
         <a ui-sref="material.configure" class="button interior__header-action">
-          My Things
+          Connected Things
         </a>
       </div>
     </div>
