--- a/public/pages/collection-browser.html
+++ b/public/pages/collection-browser.html
@@ -3,14 +3,15 @@
     <i class="fa fa-chevron-down" ng-show="hideSection"></i>
     <i class="fa fa-chevron-up" ng-show="!hideSection"></i>
   </span>
+
   <div class="sidebar__pane-content">
     <header class="sidebar__toolbar sidebar__toolbar--header">
-      <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('nodes')" ng-class="{'active' : tab.state === 'nodes'}" title="Nodes">
+      <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('things')" ng-class="{'active' : tab.state === 'things'}" title="Things">
         Things
       </a>
 
-      <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('flows')" ng-class="{'active' : tab.state === 'flows'}" title="Flows">
-        Flows
+      <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('tools')" ng-class="{'active' : tab.state === 'tools'}" title="Tools">
+        Tools
       </a>
 
       <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('debug')" ng-class="{'active' : tab.state === 'debug'}" title="Debug">
@@ -19,53 +20,37 @@
     </header>
 
     <main class="sidebar__pane-body">
-      <div ng-show="tab.state == 'nodes'">
-        <md-tabs md-dynamic-height>
-          <md-tab label="Operators">
-            <node-collection flow="flow" nodes="nodes.operators" filter-query="filterQuery" view-style="collectionViewStyle"></node-collection>
-          </md-tab>
+      <node-collection flow="flow" nodes="nodes.configured" filter-query="filterQuery" view-style="collectionViewStyle" ng-show="tab.state == 'things'"></node-collection>
+      <!-- <node-collection flow="flow" nodes="nodes.available" filter-query="filterQuery" view-style="collectionViewStyle"></node-collection> -->
 
-          <md-tab label="Configured">
-            <node-collection flow="flow" nodes="nodes.configured" filter-query="filterQuery" view-style="collectionViewStyle"></node-collection>
-          </md-tab>
-
-          <md-tab label="Available">
-            <node-collection flow="flow" nodes="nodes.available" filter-query="filterQuery" view-style="collectionViewStyle"></node-collection>
-          </md-tab>
-        </md-tabs>
-      </div>
-
-      <node-collection ng-show="tab.state == 'flows'" flow="flow" nodes="flowNodes" filter-query="filterQuery" view-style="collectionViewStyle"></node-collection>
+      <node-collection ng-show="tab.state == 'tools'" flow="flow" nodes="nodes.operators" filter-query="filterQuery" view-style="collectionViewStyle"></node-collection>
 
       <flow-debug-browser ng-show="tab.state == 'debug'"></flow-debug-browser>
     </main>
 
-    <footer class="sidebar__toolbar sidebar__toolbar--footer" ng-show="tab.state == 'debug'">
-      <button ng-click="debugLines = []" class="sidebar__toolbar-button">
-        <i class="fa fa-ban fa-lg"></i>
-      </button>
+    <footer class="sidebar__toolbar sidebar__toolbar--footer">
+      <span ng-show="tab.state == 'debug'">
+        <button ng-click="debugLines = []" class="sidebar__toolbar-button">
+          <i class="fa fa-ban fa-lg"></i>
+        </button>
 
-      <button ng-click="controller.toggleViewSource()" class="sidebar__toolbar-button">
-        <i class="fa fa-code fa-lg"></i>
-      </button>
+        <button ng-click="controller.toggleViewSource()" class="sidebar__toolbar-button">
+          <i class="fa fa-code fa-lg"></i>
+        </button>
+      </span>
+
+      <span ng-hide="tab.state == 'debug'">
+        <button ng-if="collectionViewStyle == 'list'" ng-click="controller.setCollectionViewStyle('grid')" class="sidebar__toolbar-button">
+          <i class="fa fa-th-large fa-lg"></i>
+        </button>
+        <button ng-if="collectionViewStyle == 'grid'" ng-click="controller.setCollectionViewStyle('list')" class="sidebar__toolbar-button">
+          <i class="fa fa-th-list fa-lg"></i>
+        </button>
+      </span>
 
       <div class="sidebar__filter-form">
         <i class="fa fa-search fa-lg sidebar__filter-icon"></i>
         <input ng-model="filterQuery" class="sidebar__filter-input" type="search" name="Filter" placeholder="Filter...">
-      </div>
-    </footer>
-
-    <footer class="sidebar__toolbar sidebar__toolbar--footer" ng-hide="tab.state == 'debug'">
-      <button ng-if="collectionViewStyle == 'list'" ng-click="controller.setCollectionViewStyle('grid')" class="sidebar__toolbar-button">
-        <i class="fa fa-th-large fa-lg"></i>
-      </button>
-      <button ng-if="collectionViewStyle == 'grid'" ng-click="controller.setCollectionViewStyle('list')" class="sidebar__toolbar-button">
-        <i class="fa fa-th-list fa-lg"></i>
-      </button>
-
-      <div class="sidebar__filter-form">
-        <i class="fa fa-search fa-lg sidebar__filter-icon"></i>
-        <input ng-model="filterQuery.name" class="sidebar__filter-input" type="search" name="Filter" placeholder="Filter...">
       </div>
     </footer>
   </div>
