--- a/public/pages/node-wizard/index.html
+++ b/public/pages/node-wizard/index.html
@@ -3,7 +3,7 @@
     <h2 class="md-toolbar-tools page-heading">
       <a href class="menu-icon flow-top-bar-tool--menu-button" ng-click="toggleNav()">
         <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
-        Connect Things
+        Things
       </a>
     </h2>
   </div>
