--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -1,18 +1,23 @@
 <div class="interior__wrapper">
   <header class="interior__header">
     <div class="interior">
-      <h2>All Things</h2>
+      <div class="tabs">
+        <a ui-sref="material.nodewizard.addnode" class="tab-link is-selected">Things</a>
+        <a ui-sref="material.configure" class="tab-link">Connected Things</a>
+      </div>
       <div class="interior__header-actions">
         <div class="lookup">
           <i class="lookup__icon fa fa-search fa-lg"></i>
           <input ng-model="nodeNameSearch" placeholder="Filter Things..." type="search" class="lookup__input" autofocus>
         </div>
 
+        <!--
         <div class="interior__header-separator"></div>
 
         <a ui-sref="material.configure" class="button interior__header-action">
           Connected Things
         </a>
+        -->
       </div>
     </div>
   </header>
